@@ -1,5 +1,10 @@
 2000-08-01  Akim Demaille  <akim@epita.fr>
 
+	* acidentifiers: Catch ptrdiff_t.
+	* acspecific.m4 (AM_TYPE_PTRDIFF_T): AU define.
+
+2000-08-01  Akim Demaille  <akim@epita.fr>
+
 	* autoscan.pl: Be ready to handle AC_CHECK_TYPES requests.
 	Quote properly the output.
 	Remove useless backslashes.
